# sternhalma-server

./: .gitignore  Cargo.toml  README.md  flake.nix
docs/: protocol.md
src/server/: mod.rs
src/sternhalma/: mod.rs
src/sternhalma/board/: mod.rs  player.rs
sternhalma-agent/: README.md  main.py  pyproject.toml  sternhalma.py  test_game.py
sternhalma-game/: Cargo.toml  README.md
sternhalma-game/src/: lib.rs  movement.rs  player.rs
sternhalma-game/src/board/: mod.rs
sternhalma-python/: Cargo.toml  README.md
sternhalma-python/src/: lib.rs
sternhalma-server/: Cargo.toml  README.md
sternhalma-server/docs/: protocol.md
sternhalma-server/src/: client.rs  lib.rs  messages.rs  protocol.rs  timing.rs
sternhalma-server/tests/: connection.rs  gameplay.rs  reconnection.rs
sternhalma-server/tests/common/: mod.rs
