[workspace]

members = ["sternhalma-server", "sternhalma-game", "sternhalma-python"]
resolver = "2"

[workspace.dependencies]

# Iteration
itertools = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Internal
sternhalma-game = { path = "sternhalma-game" }
