[package]
name = "sternhalma_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "sternhalma_rs"
crate-type = ["cdylib"]

[dependencies]

# Game logic
sternhalma-game = { workspace = true }

# Python bindings
pyo3 = { version = "0.27.1", features = ["extension-module"] }
numpy = { version = "0.27.1" }
