[package]
name = "sternhalma-server"
version = "0.1.0"
edition = "2024"

[dependencies]

# Command line argument parsing
clap = { version = "4", features = ["derive"] }

# Iteration
itertools = { workspace = true }

# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"

# Web server
axum = { version = "0.8.7", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }

# Serialization
serde = { workspace = true }
#serde_json = "1"
ciborium = "0.2"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
log = { workspace = true }
env_logger = { workspace = true }
humansize = "2"

# Error handling
anyhow = { workspace = true }

# Sternhalma Game
sternhalma-game = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serial_test = "3"
assert_matches = "1"
